--- a/frontend-first/index.html
+++ b/frontend-first/index.html
@@ -12,7 +12,7 @@
 
     <script>
         function changeColor() {
-            document.getElementsByTagName('body')[0].style.backgroundColor="purple";
+            document.getElementsByTagName('body')[0].style.backgroundColor="lightblue";
         }
 
         function removeColor() {
